--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "yarn tinacms server:start -c \"next dev\"",
-    "build": "yarn tinacms server:start -c \"next build\"",
-    "start": "yarn tinacms server:start -c \"next start\"",
+    "dev": "yarn next dev",
+    "build": "yarn next build",
+    "start": "yarn next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -38,7 +38,7 @@
     "use-resize-observer": "^9.1.0"
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.21.3",
+    "@babel/eslint-parser": "^7.11.0",
     "@fec/remark-a11y-emoji": "^3.1.0",
     "@next/bundle-analyzer": "^13.3.1",
     "@tinacms/cli": "^0.60.0",
@@ -48,8 +48,8 @@
     "@types/swiper": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.59.9",
+    "ajv": "^7.2.4",
     "all-contributors-cli": "^6.26.0",
-    "@babel/eslint-parser": "^7.11.0",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.0.0",
     "eslint-config-next": "^13.2.4",
