--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "schema-dts": "^1.1.2",
     "styled-components": "^5.3.5",
     "swiper": "9.3.2",
+    "tinacms": "^1.5.8",
     "url-loader": "^4.1.1",
     "use-clipboard-copy": "^0.2.0",
     "use-resize-observer": "^9.1.0"
@@ -40,12 +41,14 @@
     "@babel/eslint-parser": "^7.11.0",
     "@fec/remark-a11y-emoji": "^3.1.0",
     "@next/bundle-analyzer": "^13.3.1",
+    "@tinacms/cli": "^0.60.0",
     "@types/react": "^17.0.20",
     "@types/react-mailchimp-subscribe": "^2.1.1",
     "@types/styled-components": "^5.1.25",
     "@types/swiper": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.59.9",
+    "ajv": "^7.2.4",
     "all-contributors-cli": "^6.26.0",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.0.0",
