--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
+    "dev": "yarn next dev",
+    "build": "yarn next build",
+    "start": "yarn next start",
     "lint": "next lint"
   },
   "dependencies": {
@@ -21,9 +21,9 @@
     "nextjs-color-mode": "^1.0.5",
     "polished": "^4.1.3",
     "prism-react-renderer": "^1.3.5",
-    "react": "18.0.0",
+    "react": "17.0.2",
     "react-animate-height": "^2.0.23",
-    "react-dom": "18.0.0",
+    "react-dom": "17.0.2",
     "react-hook-form": "^7.17.4",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-schemaorg": "^2.0.0",
@@ -42,13 +42,13 @@
     "@fec/remark-a11y-emoji": "^3.1.0",
     "@next/bundle-analyzer": "^13.3.1",
     "@tinacms/cli": "^0.60.0",
-    "@types/react": "^18.0.0",
+    "@types/react": "^17.0.20",
     "@types/react-mailchimp-subscribe": "^2.1.1",
     "@types/styled-components": "^5.1.25",
     "@types/swiper": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "@typescript-eslint/parser": "^5.59.9",
-    "ajv": "^8.8.2",
+    "ajv": "^7.2.4",
     "all-contributors-cli": "^6.26.0",
     "copy-webpack-plugin": "^11.0.0",
     "eslint": "^8.0.0",
