--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "date-fns": "^2.29.3",
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
-    "next": "12.1.0",
+    "next": "^12.0.0",
     "nextjs-color-mode": "^1.0.5",
     "polished": "^4.1.3",
     "prism-react-renderer": "^1.3.5",
-    "react": "17.0.2",
+    "react": "^18.1.0",
     "react-animate-height": "^2.0.23",
-    "react-dom": "17.0.2",
+    "react-dom": "^18.1.0",
     "react-hook-form": "^7.17.4",
     "react-mailchimp-subscribe": "^2.1.3",
     "react-schemaorg": "^2.0.0",
@@ -40,9 +40,9 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.11.0",
     "@fec/remark-a11y-emoji": "^3.1.0",
-    "@next/bundle-analyzer": "^13.3.1",
+    "@next/bundle-analyzer": "^12.0.1",
     "@tinacms/cli": "^0.60.0",
-    "@types/react": "^17.0.20",
+    "@types/react": "^18.2.64",
     "@types/react-mailchimp-subscribe": "^2.1.1",
     "@types/styled-components": "^5.1.25",
     "@types/swiper": "^6.0.0",
