--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "yarn next dev",
     "build": "yarn next build",
     "start": "yarn next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@accessible/drawer": "^3.0.2",
@@ -18,6 +19,7 @@
     "gray-matter": "^4.0.3",
     "lodash": "^4.17.21",
     "next": "^12.0.0",
+    "next-sitemap": "^4.2.3",
     "nextjs-color-mode": "^1.0.5",
     "polished": "^4.1.3",
     "prism-react-renderer": "^1.3.5",
